# SMSS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
resources/: smss.rc
src/: database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
